Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 
 <p>FASTA files contain genomic information as well as a name for that sequence. The format of the file looks like: </p>
 
-<p><code>&gt;name_of_read</code>
-<code>NUCLEOTIDE_SEQUENCE</code></p>
+<p><code>&gt;name_of_read</code> </p>
+
+<p><code>NUCLEOTIDE_SEQUENCE</code></p>
 
 <h3>
 <a name="program-requirements" class="anchor" href="#program-requirements"><span class="octicon octicon-link"></span></a>Program Requirements</h3>
