Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 <h3>
 <a name="program-requirements" class="anchor" href="#program-requirements"><span class="octicon octicon-link"></span></a>Program Requirements</h3>
 
-<p>In order to run the Python program draw_histogram.py, you MUST have pylab installed. The program uses Python's pylab tool to create its visualization. You can run this program on the command line, by specifying the required parameter of a FASTA file and optional parameter (num_bins) of the number of bins (default is 10). You can call the program in the command line as follows:</p>
+<p>In order to run the Python program drawHistogram.py, you MUST have pylab installed. The program uses Python's pylab tool to create its visualization. You can run this program on the command line, by specifying the required parameter of a FASTA file and optional parameter (num_bins) of the number of bins (default is 10). You can call the program in the command line as follows:</p>
 
-<p><code>[user@localhost] $ draw_histogram.py fasta_file.fasta -num_bins 25</code></p>
+<p><code>[user@localhost] $ drawHistogram.py fasta_file.fasta -num_bins 25</code></p>
 
 <h3>
 <a name="output-histogram" class="anchor" href="#output-histogram"><span class="octicon octicon-link"></span></a>Output Histogram</h3>
