Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 
 <p>This program produces a histogram of the lengths of the reads of the input FASTA. Each FASTA input can contain thousands of reads and it is often difficult to get a good understanding of your read sizes by simply looking at the FASTA. The histogram produced shows the distribution of your read lengths, with size on the x-axis and number of reads in that bin on the y-axis.</p>
 
+<p><img src="http://imgur.com/UzIkxyB" alt="Example Histogram"></p>
+
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
