Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,32 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Fasta histogram by edenmark</title>
+    <meta name="description" content="Fasta histogram : Creates a histogram for the read lengths of a FASTA file. ">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <title>Fasta histogram</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Fasta histogram</h1>
-        <p>Creates a histogram for the read lengths of a FASTA file. </p>
-        <p class="view"><a href="https://github.com/edenmark/FASTA_histogram">View the Project on GitHub <small>edenmark/FASTA_histogram</small></a></p>
-        <ul>
-          <li><a href="https://github.com/edenmark/FASTA_histogram/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/edenmark/FASTA_histogram/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/edenmark/FASTA_histogram">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/edenmark/FASTA_histogram">View on GitHub</a>
+
+          <h1 id="project_title">Fasta histogram</h1>
+          <h2 id="project_tagline">Creates a histogram for the read lengths of a FASTA file. </h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/edenmark/FASTA_histogram/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/edenmark/FASTA_histogram/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h3>
 <a name="welcome-to-the-fasta-histogram-creator" class="anchor" href="#welcome-to-the-fasta-histogram-creator"><span class="octicon octicon-link"></span></a>Welcome to the FASTA Histogram Creator.</h3>
 
@@ -51,7 +55,7 @@
 
 <p>This program produces a histogram of the lengths of the reads of the input FASTA. Each FASTA input can contain thousands of reads and it is often difficult to get a good understanding of your read sizes by simply looking at the FASTA. The histogram produced shows the distribution of your read lengths, with size on the x-axis and number of reads in that bin on the y-axis.</p>
 
-<p><img src="http://imgur.com/UzIkxyB" alt="Example Histogram"></p>
+<p>View an example histogram <a href="http://imgur.com/UzIkxyB">here</a>. </p>
 
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
@@ -59,11 +63,16 @@
 <p>This program was created at the Woods Hole Oceanographic Institution, Apprill Lab by Evan Denmark (<a href="https://github.com/edenmark" class="user-mention">@edenmark</a>).</p>
       </section>
     </div>
-    <footer>
-      <p>Project maintained by <a href="https://github.com/edenmark">edenmark</a></p>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
-    </footer>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Fasta histogram maintained by <a href="https://github.com/edenmark">edenmark</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
     
+
   </body>
 </html>
